--- a/slider.html
+++ b/slider.html
@@ -16,31 +16,22 @@
         </div>
 
     </div>
-
-    <div class="contentHeader">
-        <a href="#О нас">О нас</a>
-        <a href="#Каталог">Каталог</a>
-        <a href="#Доставка">Доставка</a>
-        <a href="#Сборка">Сборка</a>
-        <a href="#Контакты">Контакты</a>
-    </div>
-
-    <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
-
     <div class="container">
-
-      <div class="contentSlider">
-
-          <img src="стол.png" class="slide">
-          <img src="диван.png" class="slide">
-          <img src="зеркало.png" class="slide">
-          <img src="набор.png" class="slide">
-          <img src="стол2.png" class="slide">
-          <img src="шкаф.png" class="slide">
-          <img src="кресло.png" class="slide">
-
-      </div>  
-
+        <div class="contentHeader">
+            <a href="#О нас">О нас</a>
+            <a href="#Каталог">Каталог</a>
+            <a href="#Доставка">Доставка</a>
+            <a href="#Сборка">Сборка</a>
+            <a href="#Контакты">Контакты</a>
+        </div>
+    </div>
+    <div class="container">
+        <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
+    </div>
+    <div class="sliderContainer">
+        <button id="leftButton">←</button>
+        <div class="contentSlider"></div>  
+        <button id="rightButton">→</button>
     </div>
     
     <script src="javaScript.js"></script>
